--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </p>
     
             <p class="paragraph">
-                Stay curious, Hunter
+                Stay curious, Hunter!
             </p>
 
         </article>
